--- a/p8105_hw6_lh3000.Rmd
+++ b/p8105_hw6_lh3000.Rmd
@@ -106,6 +106,9 @@ It looks like cities with larger ORs also tends to have wider confidence interva
 
 ## Problem 2
 
+Import the birthweight data and do some data cleaning.
+(convert numeric to factor where appropriate, check for missing data)
+
 ```{r}
 baby_df = 
   read_csv("./data/birthweight.csv") %>% 
@@ -125,7 +128,6 @@ baby_df =
   )
 
 sum(is.na(baby_df))
-  
 ```
 
 There is no missing data in the birthweight dataset.
@@ -161,7 +163,7 @@ cv_df =
   )
 ```
 
-Fit my model and the other two models to the splits.
+Fit my model and the other two models using the training dataset, and calculate the RMSE using the testing dataset.
 
 ```{r}
 cv_df = 
@@ -179,7 +181,7 @@ cv_df =
     )
 ```
 
-Violin plots of RMSEs
+Violin plots of RMSEs.
 
 ```{r}
 cv_df %>% 
@@ -197,4 +199,77 @@ cv_df %>%
 In terms of the cross-validated prediction error, the best model is the one using head circumference, length, sex, and all interactions - with the lowest RMSE.
 
 
+## Problem 3
 
+Import the 2017 Central Park weather data.
+
+```{r}
+weather_df = 
+  rnoaa::meteo_pull_monitors(
+    c("USW00094728"),
+    var = c("PRCP", "TMIN", "TMAX"), 
+    date_min = "2017-01-01",
+    date_max = "2017-12-31") %>%
+  mutate(
+    name = recode(id, USW00094728 = "CentralPark_NY"),
+    tmin = tmin / 10,
+    tmax = tmax / 10) %>%
+  select(name, id, everything())
+```
+
+Draw 5000 bootstrap samples and estimate R-square
+
+```{r}
+weather_boot_results_r =
+weather_df %>% 
+  bootstrap(5000, id = "strap_number") %>% 
+  mutate(
+    models = map(.x = strap, ~lm(tmax ~ tmin, data = .x)),
+    results = map(models, broom::glance)
+  ) %>% 
+  select(strap_number, results) %>% 
+  unnest(results) %>% 
+  select(r.squared)
+```
+
+Plot the distribution of estimated R-square
+
+```{r}
+weather_boot_results_r %>% 
+  ggplot(aes(x = r.squared)) +
+  geom_density()
+```
+
+95% CI for estimated R-square is (`r quantile(pull(weather_boot_results_r, r.squared), probs = c(0.025, 0.975))`).
+
+
+Estimate log(b0 * b1)
+
+```{r}
+weather_boot_results_log =
+weather_df %>% 
+  bootstrap(5000, id = "strap_number") %>% 
+  mutate(
+    models = map(.x = strap, ~lm(tmax ~ tmin, data = .x)),
+    results = map(models, broom::tidy)
+  ) %>% 
+  select(strap_number, results) %>% 
+  unnest(results) %>% 
+  select(strap_number, term, estimate) %>% 
+  pivot_wider(
+    names_from = term, 
+    values_from = estimate
+    ) %>% 
+  rename(b0 = "(Intercept)", b1 = tmin) %>%
+  mutate(log_b0b1 = log(b0*b1)) 
+```
+
+Plot the distribution of estimated log(b0 * b1)
+
+```{r}
+weather_boot_results_log %>% 
+  ggplot(aes(x = log_b0b1)) +
+  geom_density()
+```
+
+95% CI for log(b0 * b1) is (`r quantile(pull(weather_boot_results_log, log_b0b1), probs = c(0.025, 0.975))`).
