--- a/p8105_hw6_lh3000.md
+++ b/p8105_hw6_lh3000.md
@@ -147,8 +147,26 @@ at delivery, mother’s race, average number of cigarettes smoked, so a
 model is fitted based on these variables.
 
 ``` r
-mod1 = lm(bwt ~ delwt + gaweeks + momage + mrace + smoken, data = baby_df)
+mod1 = lm(bwt ~ delwt + gaweeks + momage + mrace + smoken, data = baby_df) 
+broom::tidy(mod1)
 ```
+
+    ## # A tibble: 8 x 5
+    ##   term              estimate std.error statistic   p.value
+    ##   <chr>                <dbl>     <dbl>     <dbl>     <dbl>
+    ## 1 (Intercept)        316.       95.8       3.29  9.96e-  4
+    ## 2 delwt                5.90      0.298    19.8   1.56e- 83
+    ## 3 gaweeks             54.4       2.11     25.8   7.02e-137
+    ## 4 momage              -0.893     1.80     -0.495 6.20e-  1
+    ## 5 mraceBlack        -297.       14.9     -19.9   1.18e- 84
+    ## 6 mraceAsian         -51.5      66.6      -0.773 4.39e-  1
+    ## 7 mracePuerto Rican -145.       29.3      -4.95  7.66e-  7
+    ## 8 smoken             -11.7       0.905   -12.9   2.59e- 37
+
+Except mother’s age at delivery, all other variables are significant
+with a p-value smaller than 0.05.
+
+Plot of model residuals against fitted values
 
 ``` r
 baby_df %>% 
@@ -165,6 +183,9 @@ baby_df %>%
     ## `geom_smooth()` using formula 'y ~ x'
 
 <img src="p8105_hw6_lh3000_files/figure-gfm/unnamed-chunk-7-1.png" width="90%" />
+
+The residuals spread around 0 along the fitted values - not showing any
+pattern associated with fitted values.
 
 Compare your model to two others using cross-validated prediction error.
 
@@ -272,6 +293,8 @@ weather_boot_results_r %>%
 
 <img src="p8105_hw6_lh3000_files/figure-gfm/unnamed-chunk-13-1.png" width="90%" />
 
+Estimated R-square is approximately normally distributed.
+
 95% CI for estimated R-square is (0.8936977, 0.9274807).
 
 Estimate log(b0 \* b1)
@@ -304,5 +327,7 @@ weather_boot_results_log %>%
 ```
 
 <img src="p8105_hw6_lh3000_files/figure-gfm/unnamed-chunk-15-1.png" width="90%" />
+
+Estimated log(b0 \* b1) is approximately normally distributed.
 
 95% CI for log(b0 \* b1) is (1.9656328, 2.0584694).
